--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>website</title>
     </head>
     <body>
-        <div class="header">
+        <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
                 <ul>
@@ -16,7 +16,7 @@
                     <li><a href="#social-media-marketing">Social Media Marketing</a></li>
                 </ul>
             </div>
-        </div>
+        </header>
         <div class="hero"></div>
         <div class="content">
             <div class="search-engine-optimization">
