--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="styles.css">
         <title>website</title>
     </head>
     <body>
@@ -20,7 +20,7 @@
         <div class="hero"></div>
         <div class="content">
             <div class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left"/>
+                <img src="assets/images/search-engine-optimization.jpg" class="float-left"/>
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
