--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </p>
         </div>
     </body>
-</html></div><div class="footer">
+</html></div><footer>
 <h2>Made with ❤️️ by Horiseon</h2>
 <p>
     &copy; 2019 Horiseon Social Solution Services, Inc.
-</p></div></body></html>
+</p></footer></body></html>
